<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/searchbar"
        android:layout_width="243dp"
        android:layout_height="56dp"
        android:layout_alignEnd="@+id/rentbtn"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/library_id_field_background"
        android:hint="@string/enter_isbn_here_stu"
        android:inputType="number"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="219dp"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="205dp"
        android:background="@drawable/user_profile_background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/id_hint"
            android:textColor="@android:color/black"
            android:id="@+id/stuId"/>

        <TextView
            android:id="@+id/accesslevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/accesslevel_hint"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/submitbuton"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/searchbar"
        android:layout_marginEnd="39dp"
        android:background="@drawable/tick_button_background"
        android:text="@string/search_tick"
        android:textSize="25dp"
        android:textStyle="bold" />

   <!-- <ImageButton
        android:id="@+id/submitbutton"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/tick_button_background" />
-->
   <!-- <Button
        android:id="@+id/requestbtn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="179dp"
        android:background="@drawable/login_in_background"
        android:text="REQUESTED BOOK" />-->
    <Button
        android:id="@+id/rentbtn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:background="@drawable/login_in_background"
        android:text="@string/rented_books" />


    <TextView
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/click_here_to_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="italic" />
</RelativeLayout>