<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/sign_in"
        android:textSize="28dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_marginStart="34dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/enter_email_here"
        android:paddingStart="10dp"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="222dp"
        android:layout_marginStart="34dp"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:background="@drawable/login_in_background"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/login"
        android:textSize="16dp" />
</RelativeLayout>