<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="shrestha.shaw.librarymanagementstudent.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85sp"
        android:fontFamily="@font/roboto_black"
        android:padding="16dp"
        android:text="@string/title"
        android:textColor="@android:color/darker_gray"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/developer_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/dev_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/searchid_field"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="159dp"
        android:layout_marginStart="37dp"
        android:background="@drawable/library_id_field_background"
        android:hint="       Enter ISBN Here"
        android:inputType="number"
        android:paddingEnd="8dp"
        android:paddingStart="16dp" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/searchid_field"
        android:layout_marginEnd="39dp"
        android:background="@mipmap/circle_tick_button"
        android:contentDescription="@string/tick_button_alt" />

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/more_information_click_here_to_login"
        android:textSize="16dp"
        android:textStyle="italic" />

</RelativeLayout>
